dataset1235/2025-2/2947369575/users/4025214910/executions/1003782500_3902794658.log
== RUN (2025-08-25 23:15:24)
-- CODE: 
nome = input("Digite seu nome")
idade = input("Digite sua idade")
altura = input("Digite sua altura")
print("Nome: ",Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:16:38)
-- CODE: 
nome= input("Digite seu nome ")
idade= input("Digite sua idade ")
altura= input("Digite sua altura ")
print("Nome: ",Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:20:39)
-- CODE: 
nome= input("Digite seu nome: ")
idade= input("Digite sua idade: ")
altura= input("Digite sua altura: ")
print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:", Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:", Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:", Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:", Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:20:05)
-- CODE: 
nome= input("Digite seu nome: ")
idade= input("Digite sua idade: ")
altura= input("Digite sua altura: ")
print("Nome:Marcelo", Nome)
print("Idade:34", Idade)
print("Altura:1.79", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:Marcelo", Nome)
                          ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:Marcelo", Nome)
                          ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:Marcelo", Nome)
                          ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:Marcelo", Nome)
                          ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:12:55)
-- CODE: 
Nome = input("Digite seu nome")
Idade = input("Digite sua idade")
Altura = input("Digite sua altura")
print("Nome: ",Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura:  1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura:  1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura:  1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura:  1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:14:31)
-- CODE: 
Nome= input("Digite seu nome")
Idade= input("Digite sua idade")
Altura= input("Digite sua altura")
print("Nome: ",Caio)
print("Idade: ", 18)
print("Altura: ", 1.60)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:17:05)
-- CODE: 
nome= input("Digite seu nome ")
idade= input("Digite sua idade ")
altura= input("Digite sua altura ")
print("Nome: ",Marcelo)
print("Idade: ", 34)
print("Altura: ", 1.79)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:22:18)
-- CODE: 
Nome= input("Digite seu nome: ")
Idade= input("Digite sua idade: ")
Altura= input("Digite sua altura: ")
print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:20:45)
-- CODE: 
nome= input("Digite seu nome: ")
idade= input("Digite sua idade: ")
altura= input("Digite sua altura: ")
print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:", Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:", Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:", Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome:", Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:18:03)
-- CODE: 
nome= input("Digite seu nome: ")
idade= input("Digite sua idade: ")
altura= input("Digite sua altura: ")
print("Nome: ",Marcelo)
print("Idade: ", 34)
print("Altura: ", 1.79)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:16:06)
-- CODE: 
nome= input("Digite seu nome ")
idade= input("Digite sua idade ")
altura= input("Digite sua altura ")
print("Nome: ",Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:10:52)
-- CODE: 
Nome= input("Digite seu nome")
Idade= input("Digite sua idade")
Altura= input("Digite sua altura")
print("Nome: ",Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura:  1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura:  1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura:  1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura:  1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:17:31)
-- CODE: 
nome= input("Digite seu nome ")
idade= input("Digite sua idade ")
altura= input("Digite sua altura ")
print("Nome: ",Marcelo)
print("Idade: ", 34)
print("Altura: ", 1.79)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Marcelo)
                   ^^^^^^^
NameError: name 'Marcelo' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:14:54)
-- CODE: 
Nome= input("Caio")
Idade= input("18")
Altura= input("Digite sua altura")
print("Nome: ",Caio)
print("Idade: ", 18)
print("Altura: ", 1.60)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:15:44)
-- CODE: 
nome = input("Digite seu nome ")
idade = input("Digite sua idade ")
altura = input("Digite sua altura ")
print("Nome: ",Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:11:24)
-- CODE: 
Nome= input("Caio")
Idade= input("18")
Altura= input("1.60")
print("Nome: ",Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura:  1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura:  1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura:  1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura:  1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:14:43)
-- CODE: 
Nome= input("Caio")
Idade= input("Digite sua idade")
Altura= input("Digite sua altura")
print("Nome: ",Caio)
print("Idade: ", 18)
print("Altura: ", 1.60)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:18:41)
-- CODE: 
nome= input("Digite seu nome: ")
idade= input("Digite sua idade: ")
altura= input("Digite sua altura: ")
print("Nome: ",Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Nome)
                   ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:19:06)
-- CODE: 
nome= input("Digite seu nome: ")
idade= input("Digite sua idade: ")
altura= input("Digite sua altura: ")
print("Nome: ", Nome)
print("Idade: ", Idade)
print("Altura: ", Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ", Nome)
                    ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ", Nome)
                    ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ", Nome)
                    ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ", Nome)
                    ^^^^
NameError: name 'Nome' is not defined. Did you mean: 'nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:13:44)
-- CODE: 
Nome = input("Digite seu nome")
Idade = input("Digite sua idade")
Altura = input("Digite sua altura")
print("Nome: ",Caio)
print("Idade: ", 18)
print("Altura: ", 1.60)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Nome: ",Caio)
                   ^^^^
NameError: name 'Caio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:11:54)
-- CODE: 
Nome= input("Caio")
Idade= input("18")
Altura= input("1.60")
print("Nome: ","Nome")
print("Idade: ", "Idade")
print("Altura: ", "Altura")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura:  Altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura:  Altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura:  Altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura:  Altura
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:22:54)
-- CODE: 
Nome= input("Digite seu nome: ")
Idade= input("Digite sua idade: ")
Altura= input("Digite sua altura: ")
print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
